# ANAH

./: .gitignore  README.md
.claude/: launch.json
daemon/: .env.example  config.json  pyproject.toml
daemon/anah/: __init__.py  api.py  cli.py  config.py  daemon.py  db.py  executor.py  hermes_bridge.py  pattern_analyzer.py  task_queue.py
daemon/anah/checks/: __init__.py  l1_survival.py  l2_state.py  l3_ecosystem.py  l4_performance.py  l5_goal_generation.py
dashboard/: index.html  package.json  vite.config.js
dashboard/src/: App.jsx
