[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anah"
version = "0.1.0"
description = "Autonomous Needs-Aware Hierarchy — synthetic self-direction for autonomous agents"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19.0",
    "click>=8.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "psutil>=5.9.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
anah = "anah.cli:cli"

[tool.ruff]
target-version = "py311"
line-length = 120
